tests/miniJava/pos/001244_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { while ( java ) if ( 0 ) { } else { } } }
