tests/miniJava/neg/004116_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java extends java class java { public static void Main ( String [ ] java ) { { } } } { }
